<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/sec1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_image_cnt_desc"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/profile_pic"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/f_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:nextFocusDown="@id/ageInput"
                android:singleLine="true"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/ageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/age_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:nextFocusDown="@id/emailInput" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/sec2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_gender_title"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radGROUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radHomme"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radHomme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/g_homme"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <RadioButton
                    android:id="@+id/radFemme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/g_femme"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/sec3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/section_skills_title"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/andrSkBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:max="100" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sk_android"
            android:textAlignment="textEnd"
            android:textColor="?attr/textFillColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <SeekBar
            android:id="@+id/iosSkBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:max="100" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sk_ios"
            android:textAlignment="textEnd"
            android:textColor="?attr/textFillColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <SeekBar
            android:id="@+id/flutterSkBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:max="100" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sk_flutter"
            android:textAlignment="textEnd"
            android:textColor="?attr/textFillColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/btnRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/btn_rst_txt" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/btn_nxt_txt" />
    </LinearLayout>

</LinearLayout>